--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Este é o nosso sistema de pagamentos online</h1>
+    <p>Esta é a funcionalidade da feature1</p>
 </body>
 </html>
