--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Este é o nosso sistema de pagamentos online</h1>
     <p>Esta é a funcionalidade da feature1</p>
+    <p>Esta é a nova funcionalidade 2</p>
 </body>
 </html>
