--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>Este é o nosso sistema de pagamentos online</h1>
     <p>Esta é a funcionalidade da feature1</p>
     <p>Esta é a nova funcionalidade 2</p>
+    <button>CLICK AQUI</button>
+    
 </body>
 </html>
