--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p>Esta é a funcionalidade da feature1</p>
     <p>Esta é a nova funcionalidade 2</p>
     <button>CLICK AQUI</button>
-    
+    <p>Terceira funcionalidade</p>
 </body>
 </html>
